--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/CicFlower.jpg" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
   <title>Duo Cichorium</title>
 </head>
 
@@ -23,5 +24,6 @@
     </form>
 
   </div>
+</body>
 
 </html>
