--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,12 @@
   <link rel="icon" href="%PUBLIC_URL%/assets/ChicoryTrans.PNG" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Duo Cichorium, artist portfolio" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/ChicoryTrans.PNG" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+  <meta property="og:image" content="./assets/ChicoryTrans.PNG" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="www.duocichorium.com" />
   <title>Duo Cichorium</title>
 </head>
 
