about carousel test

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,22 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/assets/ChicoryTrans.PNG" />
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about1.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about2.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about3.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about4.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about5.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about6.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about7.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about8.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about9.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about10.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about11.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about12.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about13.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about14.png">
+  <link rel="prefetch" as="image" href="%PUBLIC_URL%/assets/hair/about15.png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Duo Cichorium, artist portfolio" />
